--- a/מעודכן אחרון/setTable/src/app/annual-revenue-diagram/annual-revenue-diagram.component.html
+++ b/מעודכן אחרון/setTable/src/app/annual-revenue-diagram/annual-revenue-diagram.component.html
@@ -1,6 +1,10 @@
-
-
-<fusioncharts
+<div style="direction: rtl;
+text-align: right;
+margin-right: 30vw;
+margin-top:6vh">
+    <fusioncharts
 [chartConfig]=chartConfig
 [dataSource]=dataSource >
 </fusioncharts>
+</div>
+
