--- a/מעודכן אחרון/setTable/src/app/home-rregistered-user/home-rregistered-user.component.html
+++ b/מעודכן אחרון/setTable/src/app/home-rregistered-user/home-rregistered-user.component.html
@@ -1,2 +1,3 @@
-<div class="login" (click)="ViewingPreviousOrders()">צפיה בהזמנות קודמות</div> 
-   <div class="login" (click)="products()">להזמנות וצפיה במוצרים</div> 
+<!-- <div class="login btn btn-primary" (click)="ViewingPreviousOrders()">צפיה בהזמנות קודמות</div> 
+   <div class="login btn btn-primary" (click)="products()">להזמנות וצפיה במוצרים</div>  -->
+   <app-previous-orders></app-previous-orders>
