--- a/מעודכן אחרון/setTable/src/app/images-pass/images-pass.component.scss
+++ b/מעודכן אחרון/setTable/src/app/images-pass/images-pass.component.scss
@@ -17,5 +17,8 @@ $lightblue:#00a0e3;
   height: 5vh;
 }
 #allBasket{
+  cursor: pointer;
+  direction: ltr !important;
+  text-align: left;
   color:$lightblue;
 }
