--- a/מעודכן אחרון/setTable/src/app/login-maneger/login-maneger.component.scss
+++ b/מעודכן אחרון/setTable/src/app/login-maneger/login-maneger.component.scss
@@ -45,12 +45,12 @@
 }
 
 form{
-    margin-left: 40vw;
+    margin-right: 35vw;
     margin-top: 10vh;
     border-color: black;
     background-color: #bdbebe ;
     width: 30vw;
-    height:80vh;
+    height:45vh;
 }
 input{
     background: #fff;
