--- a/מעודכן אחרון/setTable/src/app/logo/logo.component.html
+++ b/מעודכן אחרון/setTable/src/app/logo/logo.component.html
@@ -2,7 +2,7 @@
 <div id="divdialog" >
     <div id="dialog"  onload="del()">
         <div id="instruction" onclick="closse()" dir="ltr">
-            <div id="play">
+            <div id="play" style="margin-top: 20vh;">
                 <p id="ss"> 
                         !!הוא האתר בשביל כל פתרונות החד פעמי SetTable
                      </p>
