--- a/מעודכן אחרון/setTable/src/app/credit-card/credit-card.component.html
+++ b/מעודכן אחרון/setTable/src/app/credit-card/credit-card.component.html
@@ -1,56 +1,5 @@
-<!-- 
-<p>
- הכנס פרטי אשראי
-</p>
-<div class="blockDetails">
-    <label>: מספר כרטיס</label>
-    <input type="text" >
-    <br>
-    <br>
-    <label>:תוקף כרטיס</label>
-    <select class="select">
-    <option>2019</option>
-    <option>2020</option>
-    <option>2021</option>
-    <option>2022</option>
-    <option>2023</option>
-    <option>2024</option>
-    <option>2025</option>
-    <option>2026</option>
-    <option>2027</option>
-    <option>2028</option>
-    <option>2029</option>
-  </select>
-  <select class="select">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-      <option>6</option>
-      <option>7</option>
-      <option>8</option>
-      <option>9</option>
-      <option>10</option>
-      <option>11</option>
-      <option>12</option>
 
-  </select>
-    <br>
-    <br>
-    <label>:ספרות בגב הכרטיס 3</label>
-      <input type="text" >
-      <br>
-      <br>
-      <label>:ת.ז בעל הכרטיס</label>
-    <input type="text">
-    <br>
-    <br>
-    <label>:שם בעל הכרטיס </label>
-    <input type="text" >
-    <br>
-    <br>
-    <input type="submit" value="בצע" id="save" (click)="sendMail()">
-   </div>
-   <img src="/assets/images/474.jpg"> -->
+<div style="margin-left: 429px;
+margin-top: 200px;">
    <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+</div>
