--- a/מעודכן אחרון/setTable/src/app/login-maneger/login-maneger.component.html
+++ b/מעודכן אחרון/setTable/src/app/login-maneger/login-maneger.component.html
@@ -1,8 +1,19 @@
-<form (ngSubmit)="onSubmit()">
-    <img src="..\..\assets\images\buddy1.jpg" />
-  <input type="text" name="nameCustomer" [(ngModel)]="loginManeger.nameCustomer" placeholder="שם מנהל">
-  <br>
-  <input type="password" name="passwordCustomer" [(ngModel)]="loginManeger.passwordCustomer" placeholder="הכנס סיסמא ">
-  <br>
-  <input type="submit" value="ok" id="ok">
-</form>
+<div class="container" style="direction: rtl;
+margin-right: 400px;
+margin-top: 100px;">
+  <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4" style="margin-right: 372px;
+      margin-top: 86px;">
+          <h1 class="text-center login-title">כניסת מנהל</h1>
+          <div class="account-wall">
+              <img class="profile-img" src="..\..\assets\images\לקוח (2).png" alt="">
+              <form class="form-signin" (ngSubmit)="onSubmit()">
+              <input type="text" class="form-control" [(ngModel)]="loginManeger.nameCustomer" placeholder="שם מנהל" required autofocus>
+              <input type="password" class="form-control" [(ngModel)]="loginManeger.passwordCustomer" placeholder="הכנס סיסמא " required>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">
+                 כניסה</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
