--- a/מעודכן אחרון/setTable/src/app/login/login.component.html
+++ b/מעודכן אחרון/setTable/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<!-- <form (ngSubmit)="onSubmit()">
     <img src="..\..\assets\images\לקוח (2).png" />
   <input type="text" name="nameCustomer" [(ngModel)]="loginUser.nameCustomer" placeholder="הכנס שם">
   <br>
@@ -6,4 +6,23 @@
   <br>
   <br>
   <input type="submit" value="אישור" id="ok">
-</form>
+</form> -->
+
+
+<div class="container" style="direction:rtl">
+  <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4" style="margin-right: 372px;
+      margin-top: 86px;">
+          <h1 class="text-center login-title">כניסת משתמש</h1>
+          <div class="account-wall">
+              <img class="profile-img" src="..\..\assets\images\לקוח (2).png" alt="">
+              <form class="form-signin" (ngSubmit)="onSubmit()">
+              <input type="text" name="nameCustomer" class="form-control" [(ngModel)]="loginUser.nameCustomer" placeholder="הכנס שם" required autofocus>
+              <input type="password" name="passwordCustomer" class="form-control" [(ngModel)]="loginUser.passwordCustomer" placeholder="הכנס סיסמא" required>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">
+                 כניסה</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
