--- a/מעודכן אחרון/setTable/src/app/order-by-amount-of-diners/order-by-amount-of-diners.component.scss
+++ b/מעודכן אחרון/setTable/src/app/order-by-amount-of-diners/order-by-amount-of-diners.component.scss
@@ -5,20 +5,12 @@ input{
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
+
     border-radius: 4px;
-    text-align: right;
-    float: right;
+    text-align: center;
     }
-    p,select{
-            display: inline-block;
-        max-width: 100%; 
-        margin-bottom: 5px;
+    h2,select,p{           
         font-weight: 700;
-        float: right;
         text-align: right;
     }
     // p{
