--- a/מעודכן אחרון/setTable/src/app/previous-orders/previous-orders.component.html
+++ b/מעודכן אחרון/setTable/src/app/previous-orders/previous-orders.component.html
@@ -1,5 +1,6 @@
+
 <div *ngFor="let item of allOrdersPrevious">
-  {{item.nameProduct}}
+  {{item.nameProduct}} 
 </div>
 <div *ngIf="allOrdersPrevious.length==0">אין הזמנות קודמות</div>
-<button (click)="continue()">המשך בקניה</button>
+<button (click)="continue()" class="btn btn-primary">המשך בקניה</button>
